--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
 	<header>
 		<nav>
 			<ul>
-				<link li><a href="index.html">home&nbsp;&nbsp;&nbsp;</a></li> 
-				<link li><a href="sobre.html">sobre nós&nbsp;&nbsp;&nbsp;</a></li>
-				<link li><a href="contato.html">contato&nbsp;&nbsp;&nbsp;</a></li>
+				<link li><a href="index.html">home&nbsp;&nbsp;</a></li> 
+				<link li><a href="sobre.html">sobre nós&nbsp;&nbsp;</a></li>
+				<link li><a href="contato.html">contato&nbsp;&nbsp;</a></li>
+				<link li><a href="busca.html">busca&nbsp;&nbsp;</a></li>
 			</ul>
 		</nav>
 	</header>	
